# GAUTools

./: .gitignore  C  README.md  cli.py  config.example.ini  main.py  package-lock.json  package.json  pyproject.toml  pyright-langserver.cmd  requirements.txt
.sisyphus/: boulder.json
.sisyphus/notepads/gautools/: issues.md  learnings.md
.sisyphus/plans/: gautools.md
gautools/: client.py  grades.py  models.py  proofs.py  schedule.py
oldversion/: gsau-login-schedule.md  gsau_schedule.py
src/: cli.py  client.py  grades.py  proofs.py  schedule.py  utils.py
tests/: test_client.py  test_grades.py  test_models.py  test_proofs.py  test_schedule.py
tests/integration/: test_live.py
