[project]
name = "gautools"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "pycryptodome",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
